--- a/src/style/partials/variables.scss
+++ b/src/style/partials/variables.scss
@@ -7,6 +7,7 @@ $basic-color-2: #fcfcfc;
 $button-color: #c6b5a1;
 
 $basic-color-3: #818080;
+$basic-color-4: #f8f8f8;
 
 // fonts
 $font1: "Miller";
