--- a/src/style/partials/variables.scss
+++ b/src/style/partials/variables.scss
@@ -1,13 +1,17 @@
 // colors
 
 $bg-logo: #cfc4b7;
+$button-color: #c6b5a1;
 $basic-color-1: #fff;
 $basic-color-2: #fcfcfc;
-
-$button-color: #c6b5a1;
-
 $basic-color-3: #818080;
 $basic-color-4: #f8f8f8;
+$basic-color-5: #333333;
+$basic-color-6: #303030;
+$basic-color-6: #000;
 
 // fonts
 $font1: "Miller";
+$font2: "Merriweather";
+$font3: "Montserrat-bold";
+$font4: "Montserrat";
